--- a/build.gradle
+++ b/build.gradle
@@ -29,13 +29,19 @@ flyway {
 	user = properties['spring.datasource.username']
 	password = properties['spring.datasource.password']
 }
+apply plugin: "org.springframework.boot"
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+
 	implementation group: 'org.flywaydb', name: 'flyway-core', version: '9.14.1'
 	implementation group: 'org.postgresql', name: 'postgresql', version: '42.5.2'
+
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
